flux/infrastructure/int/restic-backup/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rest
  labels:
    app.kubernetes.io/name: restic-backup
spec:
  selector:
    app.kubernetes.io/name: restic-backup
  type: ClusterIP
  ports:
    - port: 8000
      name: http
      targetPort: http
      protocol: TCP
