flux/infrastructure/int/restic-backup/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: restic-rest-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-int
  hostnames:
    - "restic-endpoint.vpn.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rest
          port: 8000
